--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+      "dev": "vite",
+      "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+      "@popperjs/core": "^2.11.6",
+      "axios": "^1.6.4",
+      "bootstrap": "^5.2.3",
+      "laravel-vite-plugin": "^1.0",
+      "sass": "^1.56.1",
+      "vite": "^5.0"
     }
-}
+  }
